syntax = "proto3";
option csharp_namespace = "Egeshka.Auth.Grpc";

import "google/protobuf/wrappers.proto";

service AuthGrpc {
  rpc Registration(Registration.Request) returns(Registration.Response);
  rpc Login(Login.Request) returns(Login.Response);
}

message Registration {
  message Request {
    int64 telegram_user_id = 1;
    string mobile_number = 2;
    string first_name = 3;
    google.protobuf.StringValue last_name = 4;
  }

  message Response {
    string registration_token = 1;
  }
}

message Login {
  message Request {
    oneof data{
      string registration_token = 1;
      string refresh_token = 2;
    }
  }

  message Response {
    string registration_token = 1;
    string refresh_token = 2;
  }
}
